k8s/environments/akraa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akraa-lite-ingress
  namespace: akraa-lite
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - lite.akraa.io
      secretName: akraa-lite-tls
  rules:
    - host: lite.akraa.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
